# actix_failwrap

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  coverage.lcov
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/actions/setup/: action.yml
.github/workflows/: 010-format.yml  010-tests.yml  020-publish.yml  020-tests.yml  030-publish.yml  overall-coverage.yml
actix_failwrap/: Cargo.toml
actix_failwrap/src/: lib.rs
actix_failwrap_proc/: Cargo.toml
actix_failwrap_proc/src/: lib.rs
actix_failwrap_proc/src/helpers/: mod.rs  status_codes.rs  unique_attr.rs
actix_failwrap_proc/src/macro_generation/: mod.rs  response_error.rs
actix_failwrap_proc/src/macro_input/: error_response.rs  mod.rs  proof_route.rs  response_error.rs
actix_failwrap_proc/src/macro_output/: error_response.rs  mod.rs
actix_failwrap_proc/src/misc/: errors.rs
coverage-html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-html/src/: index.html  lib.rs.func-c.html  lib.rs.func.html  lib.rs.gcov.html
coverage-html/src/helpers/: index-sort-f.html  index-sort-l.html  index.html  status_codes.rs.func-c.html  status_codes.rs.func.html  status_codes.rs.gcov.html  unique_attr.rs.func-c.html  unique_attr.rs.func.html  unique_attr.rs.gcov.html
coverage-html/src/macro_input/: error_response.rs.func-c.html  error_response.rs.func.html  error_response.rs.gcov.html  index-sort-f.html  index-sort-l.html  index.html  proof_route.rs.func-c.html  proof_route.rs.func.html  proof_route.rs.gcov.html
src/: lib.rs
src/helpers/: mod.rs  semantics.rs  status_codes.rs  unique_attr.rs
src/macro_input/: error_response.rs  mod.rs  proof_route.rs
src/macro_output/: error_response.rs  mod.rs  proof_route.rs
src/tests/: README.md  error_response.rs  mod.rs  proof_route.rs  status_code.rs  status_codes.rs  unique_attr.rs
tests/: README.md  collector_override.rs  common.rs  error_overrides.rs  extractor_override.rs  response_transformer.rs  variant_types.rs
(+9 files in other folders)
