[package]
name = "actix_failwrap_proc"
description = "Combine the power of thiserror with Actix Web for expressive error types and effortless propagation using the ? operator."
repository = "https://github.com/FlakySL/actix_failwrap"
license = "GPL-3.0"
readme = "../README.md"
version = "1.0.0"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
keywords = [
	"errors",
	"thiserror",
	"handling",
	"actix_web",
	"actix-web"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
strsim = "0.11.1"
syn = { version = "2.0.100", features = ["full"] }
thiserror = "2.0.12"

[dev-dependencies]
actix-web = "4.11.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
