[package]
name = "actix_failwrap"
description = "A micro-package that enables ergonomic error propagation (using thiserror) inside actix-web route handlers."
repository = "https://github.com/FlakySL/actix_failwrap"
license = "GPL-3.0"
readme = "./README.md"
version = "1.0.2"
edition = "2024"
authors = ["Esteve Autet <esteve@memw.es>", "Chiko <chiko@envs.net>"]
keywords = [
	"errors",
	"thiserror",
	"handling",
	"actix_web",
	"actix-web"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.96"
quote = "1.0.40"
strsim = "0.11.1"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }

[dev-dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
reqwest = "0.12.23"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.143"
slab = "0.4.11" # version override for vulnerability
thiserror = "2.0.12"
